# idkernel

./: .gitignore  Cargo.toml  build.rs  rust-toolchain.toml  x86_64-kern_test.json
.cargo/: config.toml
boot/src/: main.rs
idker/: Cargo.toml  build.rs  layout.ld  rust-toolchain.toml  rustfmt.toml
idker/boot/: Cargo.toml
idker/boot/src/: main.rs
idker/src/: gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  vga_framebuffer.rs
idker/src/allocator/: fixed_size_block.rs  heap_frame.rs  linked_list.rs  mod.rs
idker/src/arch/x86_64/: acpi.rs  consts.rs  multi_core.rs
idker/src/arch/x86_64/paging/: debug.rs  frame_allocator.rs  mod.rs
idker/src/capability/: mod.rs  syscall.rs
idker/src/context/: elf.rs  init.rs  mod.rs  page_table.rs  registry.rs  switch.rs  syscall.rs  task.rs
idker/src/file/: initfs.rs  mod.rs  procfs.rs  syscall.rs  system.rs
idker/src/syscalls/: asm.rs  memory.rs  mod.rs  userspace.rs
idker/src/task/: executor.rs  keyboard.rs  mod.rs
idker/src/utils/: align_include.rs  geniter.rs  mod.rs  shortflags.rs
idker/tests/: should_panic.rs
include_dir/: Cargo.toml
include_dir/src/: lib.rs
include_dir_macros/: Cargo.toml
include_dir_macros/src/: lib.rs
initdir/: initproc
initproc/: Cargo.toml  x86_64-smoke.json
initproc/.cargo/: config.toml
initproc/src/: main.rs
src/: gdt.rs  geniter.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  vga_buffer.rs  vga_framebuffer.rs
src/allocator/: fixed_size_block.rs  heap_frame.rs  linked_list.rs  mod.rs
src/arch/: mod.rs
src/arch/x86_64/: acpi.rs  apic.rs  consts.rs  mod.rs  multi_core.rs  paging.rs  start.rs
src/arch/x86_64/paging/: debug.rs  frame_allocator.rs  mod.rs  thread.rs
src/asm/x86_64/: trampoline.asm
src/context/: mod.rs
src/syscalls/: mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
syscall/: Cargo.toml
syscall/src/: common.rs  lib.rs  raw.rs  syscall.rs
syscall/syscall_macros/: Cargo.toml
syscall/syscall_macros/src/: lib.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
