[package]
name = "kerneltest"
version = "0.1.0"
authors = ["Rossi Lorenzo <snowycoder@gmail.com>"]
edition = "2018"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false


[dependencies]
bootloader = { version = "0.9", features = ["map_physical_memory"] }
volatile = "0.2"
spin = "0.5"
x86_64 = "0.12"
uart_16550 = "0.2"
pic8259_simple = "0.2"
pc-keyboard = "0.5"
linked_list_allocator = "0.8"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2"
default-features = false

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["alloc"]

[profile.dev]
#panic = "abort"

[profile.release]
#panic = "abort"

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
test-timeout = 300                  # (in seconds)

