[package]
name = "kerneltest"
version = "0.1.0"
authors = ["Rossi Lorenzo <snowycoder@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "boot",
]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false


[dependencies]
bootloader = "0.10"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14"
uart_16550 = "0.2"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"
linked_list_allocator = "0.9.0"
acpi = "2.0"
raw-cpuid = "10.2"
font8x8 = { version="0.2", default-features=false, features=["unicode"]}

[features]
default = ["multi_core"]
multi_core = []

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2"
default-features = false

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["alloc"]

[package.metadata.bootloader]
map-physical-memory = true

[profile.dev]
#panic = "abort"

[profile.release]
#panic = "abort"
opt-level = 3
lto = true


