[package]
name = "kerneltest"
version = "0.1.0"
authors = ["Rossi Lorenzo <snowycoder@gmail.com>"]
edition = "2018"

[workspace]
members = [
    "boot",
]

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false


[dependencies]
itertools = { version="0.10", default-features=false, features=["use_alloc"] }
bootloader = "0.10"
volatile = "0.4"
spin = "0.9"
x86_64 = "0.14"
uart_16550 = "0.2"
pic8259 = "0.10.2"
pc-keyboard = "0.5"
linked_list_allocator = "0.9.0"
acpi = "4.0"
raw-cpuid = "10.2"
font8x8 = { version="0.2", default-features=false, features=["unicode"]}

[features]
default = ["multi_core"]
multi_core = []

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2"
default-features = false

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["alloc"]

[package.metadata.bootloader]
map-physical-memory = true

boot-info-address      = "0xFFFF_9000_0000_0000"
framebuffer-address    = "0xFFFF_9000_4000_0000"
kernel-stack-address   = "0xFFFF_9000_8000_0000"
physical-memory-offset = "0xFFFF_A000_0000_0000"

[profile.dev]
#panic = "abort"

[profile.release]
#panic = "abort"
opt-level = 3
lto = true
