[package]
name = "kerneltest"
version = "0.1.0"
authors = ["Rossi Lorenzo <snowycoder@gmail.com>"]
edition = "2018"

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false


[dependencies]
include_dir = { path="../include_dir" }
syscall = { path = "../syscall", default-features=false, features=["alloc"] }
bitflags = "1.3"
itertools = { version="0.10", default-features=false, features=["use_alloc"] }
num_enum = { version="0.5", default-features=false }
bootloader_api = "0.11"
memoffset = { version="0.6", features=["unstable_const"]}
volatile = "0.4"
spin = "0.9"
x86_64 = "0.14"
uart_16550 = "0.2"
pic8259 = "0.10.2"
pc-keyboard = "0.5"
linked_list_allocator = "0.9.0"
acpi = "5.0"
raw-cpuid = "10.2"
font8x8 = { version="0.2", default-features=false, features=["unicode"] }
goblin = { version="0.4", default-features=false, features=["elf64"] }

[features]
default = ["multi_core"]
multi_core = []

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.2"
default-features = false

[dependencies.futures-util]
version = "0.3"
default-features = false
features = ["alloc"]

[profile.dev]
#panic = "abort"

[profile.release]
#panic = "abort"
opt-level = 3
lto = true
