[package]
name = "syscall"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3.2"
num_enum = { version="0.5", default-features=false }
syscall_macros = { path = "./syscall_macros" }

[features]
raw = []
user = ["raw"]
alloc = []
default = ["user"]
