[package]
name = "boot"
version = "0.1.0"
authors = ["Rossi Lorenzo <snowycoder@gmail.com>"]
edition = "2018"

[dependencies]
bootloader-locator = "0.0.4" # for locating the `bootloader` dependency on disk
runner-utils = "0.0.2" # small helper functions for custom runners (e.g. timeouts)
locate-cargo-manifest = "0.2.0" # for locating the kernel's `Cargo.toml`